# failure-aware-surgical-rl

./: .gitignore  README.md  pyproject.toml
docs/: APPLICATION_INDEX.md  ECG_STYLE_RL_UPGRADE.md  EXPERIMENT_EVIDENCE_SUMMARY.md  FAILURE_AWARE_VPPV_MULTIEVIDENCE_FRAMEWORK.md  FIGURE_ATLAS.md  LEARNING_TO_ROUTING_FLOW.md  LOCAL_SURROL_DEPLOYMENT.md  METHOD_OVERVIEW.md  PROJECT_INDEX.md  README.md  RELIABILITY_SUPERVISED_VPPV_FRAMEWORK.md  RESEARCH_REPORT.md  SURROL_ECG_STYLE_MECHANISM_ROUTING.md  SURROL_TASK_UPGRADE_FRAMEWORK.md  TEACHER_EXPERIMENT_PROCESS.md  evidence_index.md  expanded_experiment_upgrade_plan.md  experiment_plan.md  github_upload_guide_zh.md  phd_application_project_brief.md  project_overview.md  research_sequence.md  surrol_upgrade_project.md
outputs/: embedding_risk_curriculum_finetune_pilot_summary.csv  embedding_risk_multiseed_curriculum_aggregate_summary.csv  embedding_risk_multiseed_curriculum_seed_summary.csv  embedding_risk_training_pilot_comparison.csv  mechanism_routed_tangent_v5d_aggregate_summary.csv  mechanism_routed_tangent_v5d_route_summary.csv
reports/: README.md  action_space_expansion_plan_zh.md  breadth_expansion_notes_zh.md  claims_limitations_round46.md  cross_task_recovery_report.md  current_baseline_summary_round41_zh.md  ecg_style_rl_reliability_suite.md  embedding_risk_training_pilot.md  failure_aware_vppv_composite_router.md  failure_aware_vppv_cross_task_generalization.md  failure_aware_vppv_final_teacher_brief.md  failure_aware_vppv_github_readiness_audit.md  failure_aware_vppv_mixed_perturbation_priority.md  (+87 more)
(+278 files in other folders)
