[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-surgical-rl"
version = "0.1.0"
description = "Constraint-conditioned RL prototype for contact-rich surgical manipulation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "gymnasium>=0.29,<1.1",
    "imageio>=2.34,<3",
    "imageio-ffmpeg>=0.5,<1",
    "numpy>=1.24,<2.1",
    "matplotlib>=3.7,<3.10",
]

[project.optional-dependencies]
rl = [
    "stable-baselines3>=2.3,<2.6",
    "torch>=2.2",
    "tensorboard>=2.15",
]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
